--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "animate.css": "^4.1.0",
-    "axios": "^0.20.0",
+    "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "p5": "^1.1.9",
     "react": "^16.13.1",
     "react-animate-on-scroll": "^2.1.5",
+    "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^16.13.1",
     "react-hover-video-player": "^6.6.3",
     "react-p5": "^1.3.6",
@@ -19,15 +24,18 @@
     "react-player": "^2.6.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-visibility-sensor": "^5.1.1"
+    "react-visibility-sensor": "^5.1.1",
+    "request": "^2.88.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3030 && react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "start-server": "node server/index.js",
+    "start-app": "npm run build && npm run start-server"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,7 +53,21 @@
     ]
   },
   "devDependencies": {
+    "dotenv": "^8.2.0",
     "gh-pages": "^3.1.0",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "nodemailer": "^6.4.3"
+  },
+  "description": "This project was Hosted via github/gitPages, using Visual Studio Code.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Samuel-Morgan-Tyghe/Basic-Website-To-React.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Samuel-Morgan-Tyghe/Basic-Website-To-React/issues"
   }
 }
