--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-p5-wrapper": "^2.3.0",
     "react-player": "^2.6.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.3",
     "react-visibility-sensor": "^5.1.1",
     "request": "^2.88.2"
   },
